# Lyovushkina_NV_CW3

./: README.md  pyproject.toml
src/: functions.py  main.py
tests/: operation_for_test.json  test_functions.py
