[tool.poetry]
name = "lyovushkina-nv-cw3"
version = "0.1.0"
description = ""
authors = ["Nadezhda Lyovushkina <lyovushkina.nv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
